--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="style.css" type="text/css" charset="utf-8" />
-    
-    
-
+    <link rel="stylesheet" href="static/style.css" type="text/css" charset="utf-8" />
 
 <title> First Prise</title>
 
