Created closed page

--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -7,13 +7,15 @@
 
 </head>
 <body>
+    <div class="background"></div>
+
     <div>
         <form action="/update" method="POST">
             <div id="main_text">{{question}}</div>
             <input id="test_input" name="test"/>
             <input type="submit">
         </form>
-    </div>
+    </div>   
 </body>
 
 </html>
