--- a/you_are_real/static/style.css
+++ b/you_are_real/static/style.css
@@ -21,10 +21,20 @@
     font-weight: normal;
 }
 
-body {
+html, body {
+  height: 100%;
+  margin: 0px;
+}
+
+.background {
   background-image: url('images/glitch.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  height: 100%;
 }
 
+.blurred {
+  filter:blur(6px);
+  
+}
