--- a/you_are_real/templates/closed.html
+++ b/you_are_real/templates/closed.html
@@ -3,16 +3,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="static/closed.css">
 
 
         <title>closed</title>
 
     </head>
     <body>
-        <div class="background blurred"></div>
+        <div class="background"></div>
         <div class="text_box">
-            <h1>WEBSITE IS CLOSED</h1>
+            <h1>OPENING HOURS</h1>
+            <h2> 8:00 16:00 ALL DAYS </h2>
+            <h3> </h3>
             
         </div>
 
