--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="static/style.css" type="text/css" charset="utf-8" />
+    
 
 <title> First Prise</title>
 
@@ -11,7 +13,7 @@
 
     <div>
         <form action="/update" method="POST">
-            <div id="main_text">{{question}}</div>
+            <div id="main_text">DO YOU THINK YOU ARE REAL</div>
             <input id="test_input" name="test"/>
             <input type="submit">
         </form>
