include the website to google

--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
     <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="static/style.css" type="text/css" charset="utf-8" />
     
