--- a/you_are_real/templates/closed.html
+++ b/you_are_real/templates/closed.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
         <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
         <link rel="stylesheet" href="static/closed.css">
         <meta charset="UTF-8">
