USe current time from client

--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
-    <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="static/style.css" type="text/css" charset="utf-8" />
-    
-
-<title> First Prise</title>
-
-</head>
-<body>
-    <div class="background"></div>
-
-    <div>
-        <form action="/update" method="POST">
-            <div id="main_text">DO YOU THINK YOU ARE REAL</div>
-            <input id="test_input" name="test"/>
-            <input type="submit">
-        </form>
-    </div>   
-</body>
-
+    <html>
+        <head>
+            <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
+            <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
+            <script src="static/check_open.js" type="text/javascript"></script>
+        </head>
+    <body onload="check_load()"></body>
 </html>
