--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -1,7 +1,5 @@
 
-<div class="background"></div>
-
-<div>
+<div class="background">
     <form action="/update" method="POST">
         <div id="main_text">DO YOU THINK YOU ARE REAL</div>
         <input id="test_input" name="test"/>
