Created data access layer

--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -2,7 +2,7 @@
 <div class="background">
     <form action="/update" method="POST">
         <div id="main_text">DO YOU THINK YOU ARE REAL</div>
-        <input id="test_input" name="test"/>
+        <input id="answer_input" name="answer"/>
         <input type="submit">
     </form>
 </div>   
