--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -1,7 +1,7 @@
 
 <div class="background">
     <form action="/update" method="POST">
-        <div id="main_text">DO YOU THINK YOU ARE REAL</div>
+        <div id="main_text">{{question.upper()}}</div>
         <input id="answer_input" name="answer"/>
         <input type="submit">
     </form>
