--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -5,5 +5,5 @@
             <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
             <script src="static/check_open.js" type="text/javascript"></script>
         </head>
-    <body onload="check_load()"></body>
+    <body onload="checkLoad()"></body>
 </html>
