--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -1,8 +1,8 @@
 
 <div class="background">
     <form id="QuestionForm" action="/update" method="POST">
-        <div id="main_text">{{question.upper()}}</div>
-        <input id="answer_input" name="answer"/>
+        <div id="MainText">{{question.upper()}}</div>
+        <input id="AnswerInput" name="answer"/>
         <button type="button" onclick="submitForm()">Submit</button>
-    </form>
+    </div>
 </div>   
