--- a/you_are_real/templates/closed.html
+++ b/you_are_real/templates/closed.html
@@ -1,6 +1,6 @@
 
 <div class="background"></div>
-<div class="text_box">
+<div class="TextBox">
     <h1>OPENING HOURS</h1>
     <h2> 8:00 16:00 ALL DAYS </h2>
     <h3> </h3>
