--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -1,8 +1,8 @@
 
 <div class="background">
-    <form id="QuestionForm" action="/update" method="POST">
+    <div id="QuestionForm">
         <div id="MainText">{{question.upper()}}</div>
-        <input id="AnswerInput" name="answer"/>
+        <div id="AnswerInput" contenteditable="True"></div>
         <button type="button" onclick="submitForm()">Submit</button>
     </div>
 </div>   
