--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -3,6 +3,8 @@
     <div id="QuestionForm">
         <div id="MainText">{{question.upper()}}</div>
         <div id="AnswerInput" contenteditable="True"></div>
-        <button type="button" onclick="submitForm()">Submit</button>
+        <button class="button1" onclick="submitForm()" type="button">Submit</button>
+    
     </div>
 </div>   
+
