--- a/you_are_real/static/open.css
+++ b/you_are_real/static/open.css
@@ -1,7 +1,7 @@
 #MainText{
     color: #ffffff;
     text-shadow: -1px -1px 0 rgb(255, 0, 0), 1px -1px 0 rgb(204, 0, 255), -1px 1px 0 rgb(0, 255, 55), 1px 1px 0 rgb(0, 38, 255);
-    font-size: 100px;
+    font-size: 70px;
     font-family: 'distortion_dos_analogueRg';
     margin: 0;
     padding: 0;
@@ -33,20 +33,26 @@ html, body {
   align-items: center;
 }
 
-.blurred {
-  filter:blur(6px);
   
-}
-
 #AnswerInput
 {
+padding: 1%;
+  border-style: ridge;
+  min-height: 80px;
+  max-height: 200px;
+  width: 50%;
+  font-family: 'Courier New', monospace;
+  font-size: 12px;
+  color: rgb(0, 0, 0);
   background-color: white;
-  border-style: ridge; 
-  min-height: 200px;
-  max-height: 500px;
-  overflow-y: scroll;
-  width: 60%;
+  overflow-y: hidden;
+
+ 
+
+
 }
+  
+
 
 #QuestionForm
 {
@@ -54,4 +60,12 @@ html, body {
   flex-direction: column;
   align-items: center;
   width: 50%;
+}
+.button
+{
+  border:none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  top: 1.5%;
 }
