--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -3,8 +3,7 @@
     <div id="QuestionForm">
         <div id="MainText">{{question.upper()}}</div>
         <div id="AnswerInput" contenteditable="True"></div>
-        <button class="button" onclick="submitForm()" type="button">Submit</button>
-    
+        <button class="button" onclick="submitForm()" type="button">Volunteer</button>
     </div>
 </div>   
 
