outer-container div

--- a/you_are_real/templates/closed.html
+++ b/you_are_real/templates/closed.html
@@ -1,8 +1,6 @@
-
-<div class="background"></div>
-<div class="TextBox">
-    <h1>OPENING HOURS</h1>
-    <h2> 8:00 16:00 ALL DAYS </h2>
-    <h3> </h3>
-    
+<div class="outer-container background">
+    <div class="TextBox">
+        <h1>OPENING HOURS</h1>
+        <h2> 8:00 16:00 ALL DAYS </h2>
+    </div>
 </div>
