--- a/you_are_real/static/closed.css
+++ b/you_are_real/static/closed.css
@@ -52,3 +52,12 @@
       font-size: 50px;
     }
   }
+
+.outer-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+}
