--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -2,8 +2,13 @@
     <html>
         <head>
             <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
+            <meta property="og:image" content="/static/graph.jpg" />
+            <meta property="og:type" content="website" />
+            <meta property="og:url" content="http://doyouthinkyouarereal.com" />
+            <meta property="og:title" content="Do you think you are real" />
+            <meta property="og:description" content="" />
             <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
-            <script src="static/check_open.js" type="text/javascript"></script>
+            <script src="/static/check_open.js" type="text/javascript"></script>
         </head>
     <body onload="checkLoad()"></body>
 </html>
