--- a/you_are_real/static/open.css
+++ b/you_are_real/static/open.css
@@ -83,3 +83,15 @@ html, body {
   box-shadow: -1px -1px 0 rgb(255, 0, 0), 1px -1px 0 rgb(204, 0, 255), -1px 1px 0 rgb(0, 255, 55), 1px 1px 0 rgb(0, 38, 255);
   z-index: 3;
   }
+
+
+  @media only screen and (max-width: 600px) {
+    body {
+      height: 100%;;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+    }
+  }
