--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <meta name="google-site-verification" content="_ZbS4nmc_wZH6ipNmSD6XxZ4a_Aa5H0YFH1I9WWZspg" />
-            <meta property="og:image" content="/static/graph.jpg" />
+            <meta property="og:image" content="/static/image1.jpg" />
             <meta property="og:type" content="website" />
             <meta property="og:url" content="http://doyouthinkyouarereal.com" />
             <meta property="og:title" content=" Opening hours 8:00-16:00 ALL DAYS" />
