--- a/you_are_real/static/closed.css
+++ b/you_are_real/static/closed.css
@@ -2,8 +2,8 @@
 .TextBox
 {
 
-  font-family: 'arcaderegular';
-  font-size: 5rem;
+  font-family: 'distortion_dos_analogueRg';
+  font-size: 6rem;
   width: 50%;
   position: absolute;
   top: 25%;
@@ -15,22 +15,25 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  filter: blur(3pX);
+  text-shadow: -2px black¨;
+  letter-spacing: 7px;
+  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
 }
 
-
-@font-face {
-         font-family: 'arcaderegular';
-         src: url('fonts/arcade-webfont.woff2') format('woff2'),
-         url('fonts/arcade-webfont.woff') format('woff');
-         font-style: normal;
-         font-weight: normal;
+@font-face{
+  font-family: 'distortion_dos_analogueRg';
+  src: url('fonts/distortion_dos_analogue-webfont.woff2') format('woff2'),
+  url('distortion_dos_analogue-webfont.woff') format('woff');
+  font-style: normal;
+  font-weight: normal;
 }
 
 .background {
     background: linear-gradient(to right, rgba(48,255,144,1) 0%, rgba(237,45,237,1) 25%,
      rgba(201,152,38,1) 50%, rgba(48,255,230,1) 75%, rgba(48,255,144,1) 100%);
     background-size: 200% auto;
-    animation: shine 3s linear infinite;
+    animation: shine 8s linear infinite;
     height: 100%; }
 
     @keyframes shine {
