--- a/you_are_real/static/closed.css
+++ b/you_are_real/static/closed.css
@@ -1,9 +1,14 @@
+body
+{
 
+  height: 100%;
+  margin:0 ;
+}
 .TextBox
 {
 
   font-family: 'distortion_dos_analogueRg';
-  font-size: 6rem;
+  font-size: 70px;
   width: 50%;
   position: absolute;
   top: 25%;
@@ -33,7 +38,7 @@
     background: linear-gradient(to right, rgba(48,255,144,1) 0%, rgba(237,45,237,1) 25%,
      rgba(201,152,38,1) 50%, rgba(48,255,230,1) 75%, rgba(48,255,144,1) 100%);
     background-size: 200% auto;
-    animation: shine 8s linear infinite;
+    animation: shine 6s linear infinite;
     height: 100%; }
 
     @keyframes shine {
