--- a/you_are_real/static/closed.css
+++ b/you_are_real/static/closed.css
@@ -1,22 +1,20 @@
-body
-{
-
-  height: 100%;
-  margin:0 ;
+body{
+  margin: 0;
+ padding:0 ;
+  font-size: 5rem;
+  filter: blur(4pX);
 }
 .TextBox
 {
 
   font-family: 'distortion_dos_analogueRg';
-  font-size: 6rem;
   color: #ffffff;
   text-align: center;
   display:flex ;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  filter: blur(3pX);
-  text-shadow: -2px black¨;
+  filter: blur(4pX);
   letter-spacing: 7px;
   text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
 }
@@ -33,8 +31,10 @@ body
     background: linear-gradient(to right, rgba(48,255,144,1) 0%, rgba(237,45,237,1) 25%,
      rgba(201,152,38,1) 50%, rgba(48,255,230,1) 75%, rgba(48,255,144,1) 100%);
     background-size: 200% auto;
-    animation: shine 6s linear infinite;
-    height: 100%; }
+    animation: shine 5s linear infinite;
+    height: 100%;
+ }
+  
 
     @keyframes shine {
         to {
@@ -44,14 +44,6 @@ body
        
    
   }  
-  @media only screen and (max-width: 600px) {
-    body {
-      height: 100%;;
-      width: 100%;
-    
-
-    }
-  }
 .outer-container {
   align-items: center;
   display: flex;
@@ -59,4 +51,14 @@ body
   height: 100%;
   justify-content: center;
   width: 100%;
+ 
+}
+@media only screen and (max-width: 600px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 60px;
+
+  }
 }
