--- a/you_are_real/templates/index.html
+++ b/you_are_real/templates/index.html
@@ -6,7 +6,7 @@
             <meta property="og:image" content="/static/image1.jpg" />
             <meta property="og:type" content="website" />
             <meta property="og:url" content="http://doyouthinkyouarereal.com" />
-            <meta property="og:title" content=" Opening hours 8:00-16:00 ALL DAYS" />
+            <meta property="og:title" content="" />
             <meta property="og:description" content="" />
             <link rel="stylesheet" href="static/base.css" type="text/css" charset="utf-8" />
             <script src="/static/check_open.js" type="text/javascript"></script>
