--- a/you_are_real/templates/open.html
+++ b/you_are_real/templates/open.html
@@ -1,9 +1,7 @@
 
 <div class="background">
     <div id="QuestionForm">
-        <div id="MainText">{{question.upper()}}</div>
+        <div id="MainText">Who are you?</div>
         <div id="AnswerInput" contenteditable="True"></div>
         <button class="button" onclick="submitForm()" type="button">Volunteer</button>
     </div>
-</div>   
-
