--- a/you_are_real/static/open.css
+++ b/you_are_real/static/open.css
@@ -1,26 +1,27 @@
-#MainText{
-    color: #ffffff;
-    text-shadow: -1px -1px 0 rgb(255, 0, 0), 1px -1px 0 rgb(204, 0, 255), -1px 1px 0 rgb(0, 255, 55), 1px 1px 0 rgb(0, 38, 255);
-    font-size: 6rem;
-    font-family: 'distortion_dos_analogueRg';
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    filter: blur(1px);
+#MainText {
+  color: #ffffff;
+  text-shadow: -1px -1px 0 rgb(255, 0, 0), 1px -1px 0 rgb(204, 0, 255), -1px 1px 0 rgb(0, 255, 55), 1px 1px 0 rgb(0, 38, 255);
+  font-size: 6rem;
+  font-family: 'distortion_dos_analogueRg';
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  filter: blur(1px);
 
-  }
-  
-  
-
-@font-face{
-    font-family: 'distortion_dos_analogueRg';
-    src: url('fonts/distortion_dos_analogue-webfont.woff2') format('woff2'),
-    url('distortion_dos_analogue-webfont.woff') format('woff');
-    font-style: normal;
-    font-weight: normal;
 }
 
-html, body {
+
+
+@font-face {
+  font-family: 'distortion_dos_analogueRg';
+  src: url('fonts/distortion_dos_analogue-webfont.woff2') format('woff2'),
+    url('distortion_dos_analogue-webfont.woff') format('woff');
+  font-style: normal;
+  font-weight: normal;
+}
+
+html,
+body {
   height: 100%;
   margin: 0px;
 }
@@ -35,13 +36,10 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
- 
 }
 
-  
-#AnswerInput
-{
+
+#AnswerInput {
   padding: 1%;
   border-style: ridge;
   min-height: 80px;
@@ -52,24 +50,18 @@ html, body {
   color: rgb(0, 0, 0);
   background-color: white;
   overflow-y: hidden;
-
-
- 
-
-
 }
-  
 
 
-#QuestionForm
-{
+
+#QuestionForm {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 50%;
 }
-.button
-{
+
+.button {
   outline: none;
   cursor: pointer;
   position: relative;
@@ -81,17 +73,18 @@ html, body {
   border-block-color: rgb(194, 194, 214);
   background-color: azure;
   box-shadow: -1px -1px 0 rgb(255, 0, 0), 1px -1px 0 rgb(204, 0, 255), -1px 1px 0 rgb(0, 255, 55), 1px 1px 0 rgb(0, 38, 255);
+  margin: 10px;
+  width: 80px;
   z-index: 3;
+}
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-
-
-  @media only screen and (max-width: 600px) {
-    body {
-      height: 100%;;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-    }
-  }
+}
