--- a/closed.css
+++ b/closed.css
@@ -1,56 +1,101 @@
-body{
+body {
   margin: 0;
- padding:0 ;
-  font-size: 50px;
+  padding:0;
+  
+
+}
+
+h1 {
+  font-size:800%;
+  font-family: 'glitch';
+  text-shadow: -1px -1px 0 rgb(255 0 0), 1px -1px 0 rgb(0 14 255), -1px 1px 0 rgb(104 255 175), 1px 1px 0 rgb(245 213 39);
+    letter-spacing: 30px;
+
+
+
+}
+
+h2 {
+  font-size:175%;
+  font-stretch:extra-condensed;
+  font-family:'coding';
+  
+  
+
+
+
+
+
+  
+
 }
 
 .text-base {
-  font-family: 'distortion_dos_analogueRg';
   color: #ffffff;
   text-align: center;
-  display:flex ;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  
+
+
 }
 
 .text-box {
-  filter: blur(5pX);
-  letter-spacing: 7px;
-  text-shadow: -1px -1px 0 rgb(0, 0, 0), 1px -1px 0 rgb(0, 0, 0), -1px 1px 0 rgb(0, 0, 0), 1px 1px 0 rgb(0, 0, 0);
+
+  letter-spacing: 3px;
+
+  
 }
 
 .shitlink
 {
-  font-family: 'distortion_dos_analogueRg';
-  color: #ffffff;
+  text-decoration: none;
+  font-size: 175%;
+text-decoration-line: underline;
+  background: linear-gradient(to right, rgb(255 0 0) 5%, rgb(0 14 255) 11%,rgb(0 255 22) 18%,rgb(255 0 0) 26%, rgb(0 14 255) 37%,rgb(0 255 22) 49%,rgb(255 0 0) 55%,
+     rgb(0 14 255) 65%,rgb(0 255 22) 76%, rgb(255 0 0) 81%,rgb(0 14 255) 88%,rgb(0 255 22) 92%,rgb(255 0 0) 94%,rgb(20 14 14) 95%,rgb(0 14 255) 96%,rgb(255 255 255) 97%,rgb(0 14 255) 99%,rgb(255 247 247) 85%);
+    background-size: 9% auto;
+  animation: shine 10s cubic-bezier(0.47, 0, 0.75, 0.72) infinite;
+font-family:'coding';
+
+
+     
+   
+
+
 }
 
 @font-face{
-  font-family: 'distortion_dos_analogueRg';
-  src: url('fonts/distortion_dos_analogue-webfont.woff2') format('woff2'),
-  url('distortion_dos_analogue-webfont.woff') format('woff');
-  font-style: normal;
-  font-weight: normal;
+
+font-style: normal;
+font-weight: normal;
+font-family:'glitch';
+src: url('fonts/glitch.woff2');
+url:'glitch';
+
+  
 }
 
-.background {
-    background: linear-gradient(to right, rgba(48,255,144,1) 0%, rgba(237,45,237,1) 25%,
-     rgba(201,152,38,1) 50%, rgba(48,255,230,1) 75%, rgba(48,255,144,1) 100%);
-    background-size: 200% auto;
-    animation: shine 4s linear infinite;
-    height: 100%;
- }
-  
+@font-face{
 
-    @keyframes shine {
-        to {
-          background-position: 200% center;
-        }
-      
-       
-   
-  }  
+font-style: normal;
+font-weight: normal;
+font-family:'coding';
+src: url('fonts/coding.woff2');
+url:'coding';}
+
+
+.background {
+    background: linear-gradient(to right, rgb(255 255 255) 5%, rgb(0 0 0) 11%,rgb(255 255 255) 18%,rgb(0 0 0) 26%, rgb(255 255 255) 37%,rgb(0 0 0) 49%,rgb(255 255 255) 55%,
+     rgb(0 0 0) 65%,rgb(255 255 255) 76%, rgb(0 0 0) 81%,rgb(255 255 255) 88%,rgb(0 0 0) 92%,rgb(255 255 255) 94%,rgb(255 255 255) 95%,rgb(0 0 0) 96%,rgb(255 255 255) 97%,rgb(0 0 0) 99%,rgb(255 247 247) 85%);
+    background-size: 9% auto;
+  animation: shine 10s cubic-bezier(0.8, 1.65, 0, 0.09) infinite;
+}
+
+@keyframes shine {
+  to {
+    background-position: 150% center;
+  }
+}  
+
 .outer-container {
   align-items: center;
   display: flex;
@@ -58,14 +103,15 @@ body{
   height: 100%;
   justify-content: center;
   width: 100%;
- 
 }
+
 @media only screen and (max-width: 600px) {
   body {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 60px;
+    
 
   }
 }
