--- a/css/shit.css
+++ b/css/shit.css
@@ -81,3 +81,27 @@ text {
         opacity: 1;
     }
 }
+
+
+.container {
+    max-width: 850px;
+    margin: 0 auto;
+    padding: 20px;
+    z-index: -5;
+}
+
+
+
+#text-container {
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: rgb(0, 0, 0);
+    text-align: center; 
+    filter: blur(2px);
+    font-size: 50px;
+ z-index: -5;
+}
