--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,12 @@
 body { 
     
-  background-color: ;
+  background-color:white ;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    max-width: 830px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
