--- a/html/day_version/css/photo.css
+++ b/html/day_version/css/photo.css
@@ -1,22 +1,21 @@
 body {
 
     margin: 0;
-    padding: 20px;
+    padding: 0;
     background-color: #ffffff;;
   }
   .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     max-width: 1600px;
-    margin: 25px auto;
+    margin: 90px auto;
     align-content: center;
-    
+    filter: grayscale(1);
    
   }
   .gallery img {
-    width: calc(50% - 30px);
-    margin: 10px;
+    width: calc(50% - 10px);
+    margin: 3px;
     cursor: pointer;
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(30%);    
