--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -14,6 +14,7 @@ body {
 #MYSIDE {
 
   width:0;
+  filter: grayscale(1);
 }
 
 
@@ -40,6 +41,7 @@ body {
     position: fixed;
     top: 7px;
     left: 10px;
+    filter: grayscale(1);
     
   }
 
@@ -53,7 +55,9 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    filter: blur(1px);
+    filter: grayscale(1);
+    
+
   }
 
   /* Style the links inside the navigation menu */
@@ -66,6 +70,8 @@ body {
     text-align: left;
     font-family: 'Mooli', sans-serif;
     font-size: 27px;
+    filter: blur(1px);
+
 
 }
   /* On hover, the links will change color */
