--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -17,7 +17,14 @@ body {
   filter: grayscale(1);
 }
 
-
+df-messenger {
+  --df-messenger-bot-message: rgb(35, 93, 41);
+  --df-messenger-button-titlebar-color: #6C757D;
+  --df-messenger-chat-background-color: #fafafa;
+  --df-messenger-font-color: white;
+  --df-messenger-send-icon: #878fac;
+  --df-messenger-user-message: #393a3e;
+ }
 
 #text-container {
 
