--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -17,7 +17,7 @@ body {
   filter: grayscale(1);
 }
 
-df-messenger {
+/*df-messenger {
   --df-messenger-bot-message: rgb(35, 93, 41);
   --df-messenger-button-titlebar-color: #6C757D;
   --df-messenger-chat-background-color: #fafafa;
@@ -25,6 +25,8 @@ df-messenger {
   --df-messenger-send-icon: #878fac;
   --df-messenger-user-message: #393a3e;
  }
+
+ */
 
 #text-container {
 
