--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -1,8 +1,12 @@
-body { 
-    
-  background-color:white ;
+body {   
   margin: 0;
   padding: 0;
+  background-image: url('/images/bk/6.png'); /* Replace with your image path */
+    background-size: cover; /* This will make sure the image covers the whole page */
+    background-position: center; /* This centers the image on the page */
+    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-attachment: fixed; /* This will fix the background image during scroll */
+ 
 }
 
 .container {
@@ -14,19 +18,9 @@ body {
 #MYSIDE {
 
   width:0;
-  filter: grayscale(1);
 }
 
-/*df-messenger {
-  --df-messenger-bot-message: rgb(35, 93, 41);
-  --df-messenger-button-titlebar-color: #6C757D;
-  --df-messenger-chat-background-color: #fafafa;
-  --df-messenger-font-color: white;
-  --df-messenger-send-icon: #878fac;
-  --df-messenger-user-message: #393a3e;
- }
 
- */
 
 #text-container {
 
@@ -35,24 +29,29 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 50px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     text-align: center; 
     filter: blur(2px);
  
 }
 
 .openbtn {
+  color: #0a6daa;
     font-size: 30px;
     cursor: pointer;
-    background-color: #6C757D;
+    background-color: #ffffff;
     border: none;
     padding: 10px 15px;
     position: fixed;
     top: 7px;
     left: 10px;
-    filter: grayscale(1);
-    
+    background-image: url('/images/bk/6.png'); /* Replace with your image path */
+    background-size: cover; /* This will make sure the image covers the whole page */
+    background-position: center; /* This centers the image on the page */
+    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-attachment: fixed;
   }
+
 
   .sidenav {
     height: 100%;
@@ -60,12 +59,15 @@ body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #6C757D;
+    background-color: #ffffff;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    filter: grayscale(1);
-    
+    background-image: url('/images/bk/6.png'); /* Replace with your image path */
+    background-size: cover; /* This will make sure the image covers the whole page */
+    background-position: center; /* This centers the image on the page */
+    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-attachment: fixed; /* This will fix the background image during scroll */
 
   }
 
@@ -73,7 +75,7 @@ body {
   .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     display: block;
     transition: 0.3s;
     text-align: left;
