--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
 body {   
   margin: 0;
   padding: 0;
@@ -21,7 +22,6 @@ body {
 }
 
 
-
 #text-container {
 
     position: absolute;
@@ -36,7 +36,7 @@ body {
 }
 
 .openbtn {
-  color: #0a6daa;
+  color: #ffffff;
     font-size: 30px;
     cursor: pointer;
     background-color: #ffffff;
@@ -79,9 +79,7 @@ body {
     display: block;
     transition: 0.3s;
     text-align: left;
-    font-family: 'Mooli', sans-serif;
-    font-size: 27px;
-    filter: blur(1px);
+    font-family: 'Raleway Dots', sans-serif;    font-size: 40px;
 
 
 }
