--- a/html/day_version/css/photo.css
+++ b/html/day_version/css/photo.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
 body {
 
     margin: 0;
@@ -14,14 +15,15 @@ body {
     max-width: 1600px;
     margin: 90px auto;
     align-content: center;
+
+
    
   }
   .gallery img {
     width: calc(50% - 10px);
     margin: 3px;
     cursor: pointer;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(30%);    
+  
    
   }
 
@@ -33,7 +35,7 @@ body {
 
 
   .openbtn {
-    color: #0a6daa;
+    color: #ffffff;
     font-size: 30px;
     cursor: pointer;
     background-color: #ffffff;
@@ -78,9 +80,7 @@ body {
     display: block;
     transition: 0.3s;
     text-align: left;
-    font-family: 'Mooli', sans-serif;
-    font-size: 27px;
-    filter: blur(1px);
+    font-family: 'Raleway Dots', sans-serif;    font-size: 40px;
 
 
 }
