--- a/html/day_version/css/text.css
+++ b/html/day_version/css/text.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
+
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -10,45 +13,7 @@ body {
 
 }
 
-h1 {
-    margin: 0;
-}
-.container {
-    max-width: 760px;
-    margin: 60px auto;
-    padding: 20px;
-}
-.article {
-    margin-bottom: 30px;
-    border: 1px solid #ffffff;
-    padding: 10px;
-    cursor: pointer;
-    direction: rtl;
-    color: white;
-    background-color: #0a6daa;
-}
-.article-content {
-    display: none;
-}
 
-
-
-.openbtn {
-  color: #0a6daa;
-    font-size: 30px;
-    cursor: pointer;
-    border: none;
-    padding: 10px 15px;
-    position: fixed;
-    top: 7px;
-    left: 10px;
-    background-image: url('/images/bk/6.png'); /* Replace with your image path */
-    background-size: cover; /* This will make sure the image covers the whole page */
-    background-position: center; /* This centers the image on the page */
-    background-repeat: no-repeat; /* This will prevent the image from repeating */
-    background-attachment: fixed;
-    
-  }
 
   .sidenav {
     height: 100%;
@@ -70,35 +35,101 @@ h1 {
 
   }
 
-  /* Style the links inside the navigation menu */
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    display: block;
-    transition: 0.3s;
-    text-align: left;
-    font-family: 'Mooli', sans-serif;
-    font-size: 27px;
-    filter: blur(1px);
-
-
-}
-  /* On hover, the links will change color */
-  .sidenav a:hover {
-    color: #ddd;
-  }
-
-  /* Close button style */
-  .closebtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 30px;
-    margin-left: 50px;
-  }
-
   #MYSIDE {
 
     width:0;
   }
+  
+  
+  
+  
+  .openbtn {
+    color: #ffffff;
+      font-size: 30px;
+      cursor: pointer;
+      background-color: #ffffff;
+      border: none;
+      padding: 10px 15px;
+      position: fixed;
+      top: 7px;
+      left: 10px;
+      background-image: url('/images/bk/6.png'); /* Replace with your image path */
+      background-size: cover; /* This will make sure the image covers the whole page */
+      background-position: center; /* This centers the image on the page */
+      background-repeat: no-repeat; /* This will prevent the image from repeating */
+      background-attachment: fixed;
+    }
+  
+  
+  
+    /* Style the links inside the navigation menu */
+    .sidenav a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      display: block;
+      transition: 0.3s;
+      text-align: left;
+      font-family: 'Raleway Dots', sans-serif;    font-size: 40px;
+
+
+  
+  
+  }
+    /* On hover, the links will change color */
+    .sidenav a:hover {
+      color: #ddd;
+    }
+  
+    /* Close button style */
+    .closebtn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 30px;
+      margin-left: 50px;
+    }
+
+
+
+
+.code-block {
+  margin-bottom: -90px;
+  border-radius: 5px;
+  padding: 5px;
+  padding-top: 100px;
+  display: flow;
+}
+
+.code-header {
+  color: #ffffff;
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.code-content {
+  padding: 10px;
+  border-top: 1px solid #ddd;
+  text-align: center;
+  background-image: url('/images/bk/99.png'); /* Replace with your image path */
+  background-size: cover; /* This will make sure the image covers the whole page */
+  background-position: center; /* This centers the image on the page */
+  background-repeat: no-repeat; /* This will prevent the image from repeating */
+  background-attachment: fixed; /* This will fix the background image during scroll */
+  color: #ffffff;
+
+}
+
+pre {
+  margin: 0;
+  overflow-x: auto;
+}
+
+
+
+
+  
