--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -110,6 +110,8 @@ body {
 
 df-messenger {
 
-  --df-messenger-button-titlebar-color: #250303;
+  --df-messenger-button-titlebar-color: #ffffff;
   
    }
+
+
