--- a/html/day_version/css/index.css
+++ b/html/day_version/css/index.css
@@ -110,7 +110,7 @@ body {
 
 df-messenger {
 
-  --df-messenger-button-titlebar-color: #ffffff;
+  --df-messenger-button-titlebar-color: #202022;
   
    }
 
