--- a/html/day_version/css/text.css
+++ b/html/day_version/css/text.css
@@ -7,7 +7,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/images/bk/66.webp'); /* Replace with your image path */
+    background-image: url('/images/bk/background.jpg'); /* Replace with your image path */
     background-size: cover; /* This will make sure the image covers the whole page */
     background-position: center; /* This centers the image on the page */
     background-repeat: no-repeat; /* This will prevent the image from repeating */
@@ -27,7 +27,7 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
-    background-image: url('/images/bk/6.webp'); /* Replace with your image path */
+    background-image: url('/images/bk/background.jpg'); /* Replace with your image path */
     background-size: cover; /* This will make sure the image covers the whole page */
     background-position: center; /* This centers the image on the page */
     background-repeat: no-repeat; /* This will prevent the image from repeating */
@@ -55,7 +55,7 @@ body {
       position: fixed;
       top: 7px;
       left: 10px;
-      background-image: url('/images/bk/6.webp'); /* Replace with your image path */
+      background-image: url('/images/bk/background.jpg'); /* Replace with your image path */
       background-size: cover; /* This will make sure the image covers the whole page */
       background-position: center; /* This centers the image on the page */
       background-repeat: no-repeat; /* This will prevent the image from repeating */
@@ -117,7 +117,7 @@ body {
   padding: 10px;
   border-top: 1px solid #ddd;
   text-align: center;
-  background-image: url('/images/bk/99.webp'); /* Replace with your image path */
+  background-image: url('/images/bk/background.jpg'); /* Replace with your image path */
   background-size: cover; /* This will make sure the image covers the whole page */
   background-position: center; /* This centers the image on the page */
   background-repeat: no-repeat; /* This will prevent the image from repeating */
